<resources>
    <string name="app_name">Step to Learning</string>
    <string name="change_color">Change Color</string>
    <string name="hello_world">Change color of this text.</string>
    <string name="cafe_dessert">Cafe Desserts</string>
    <string name="Dount_desc">Donuts are glazed and sprinkled with candy.</string>
    <string name="icecream_desc">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_desc">FroYo is premium self-serve frozen yogurt.</string>
    <string name="dount_click">You purchase Dount</string>
    <string name="phone_Number">Enter Phone Number</string>
    <string name="Select">Select</string>
    <string name="spinner_prompt">Select</string>
    <string-array name="spinner_item">
        <item>Select</item>
        <item>Home</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>

    <string name="fragment_btn_txt">Tabs Fragments</string>
    <string name="home_fragment_txt">Send a Local BroadCast</string>
    <string name="Cart_fragment_txt">Add to Cart</string>
    <string name="nav_recyclerview">Recycler View</string>
    <string name="nav_score_team">ScoreKeeper</string>
    <string name="nav_prev_main">Prev Main</string>
    <string name="communication_nav_section">Communication</string>
    <string name="nav_share">Share</string>
    <string name="nav_header_heading">Person Name</string>
    <string name="nav_header_email_text">name123@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="favorites">Favorites</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="settings">Settings</string>
    <string name="manage_account">Manage Account</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="first_fragment">First Tab Fragment</string>
    <string name="second_fragment">Second Tab Fragment</string>
    <string name="third_fragment">Third Tab Fragment</string>
    <string name="plus_button_description">Plus Button to increase score</string>
    <string name="initial_count">0</string>
    <string name="minus_button_description">minus button to decrease score</string>
    <string name="team_2">Team 2</string>
    <string name="team_1">Team 1</string>
    <string name="napping_text">Napping…Sleeping…Async Action</string>

    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="book_button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="no_results">Sorry, No Result Found</string>
    <string name="no_search_string">Enter some text to search.</string>
    <string name="loading_result">Loading…</string>
    <string name="no_network_connection">Please Check Your Internet Connection and then Try Again.</string>
    <string name="nav_book_search">Book Search</string>
    <string name="no_action_performed">No Action performed.</string>
    <string name="power_connected">Power Charger is Connected.</string>
    <string name="power_disconnected">Power charger is disconnected.</string>
    <string name="custom_broadcast">Custom Broadcast Received.</string>
    <string name="reset">Reset</string>
    <string name="switch_preference_title">Setting options</string>
    <string name="switch_preference_summary">Turn this option on or off.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_settings_template">SettingsTemplateActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account_privacy">Privacy</string>
    <string name="account_private_title">Make your account private.</string>
</resources>