<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_recyclerview"
            android:orderInCategory="5"/>
        <item
            android:id="@+id/nav_scoreKeeper"
            android:icon="@drawable/ic_nav_scorekeeper"
            android:title="@string/nav_score_team"
            android:orderInCategory="10"/>
        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/ic_nav_others"
            android:title="@string/nav_prev_main"
            android:orderInCategory="25"/>
        <item
            android:id="@+id/nav_search_book"
            android:icon="@drawable/ic_nav_search"
            android:title="@string/nav_book_search"
            android:orderInCategory="20"/>
    </group>
    <item android:title="@string/communication_nav_section" android:orderInCategory="100">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share"
                android:orderInCategory="10"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/settings"
                android:orderInCategory="5"/>

        </menu>
    </item>
</menu>