<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <item android:id="@+id/favorite"
       android:orderInCategory="10"
       android:icon="@drawable/ic_white_favorite"
       app:showAsAction="ifRoom"
       android:title="@string/favorites"
       />
    <item android:id="@+id/cart"
        android:orderInCategory="20"
        android:icon="@drawable/ic_white_cart"
        app:showAsAction="ifRoom"
        android:title="@string/add_to_cart" />
    <item android:id="@+id/settings"
        android:orderInCategory="100"
                app:showAsAction="never"
        android:title="@string/settings" >
        <menu>
            <item android:id="@+id/manage_Account"
                android:title="@string/manage_account"
                android:orderInCategory="10"
                />
            <item android:id="@+id/profile_setting"
                android:title="@string/profile_setting"
                android:orderInCategory="5"
                />
        </menu>
    </item>
    <item android:id="@+id/about"
        android:orderInCategory="90"
        app:showAsAction="never"
        android:title="@string/about_us" />
</menu>