<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ScoreKeeperFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/score_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/TeamTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/team_1" />

                <ImageButton
                    android:id="@+id/decreaseTeam1"
                    style="@style/MinusBtnStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/score_1"
                    style="@style/TeamTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/ExLarge_margin"
                    android:text="@string/initial_count" />

                <ImageButton
                    android:id="@+id/increaseTeam1"
                    style="@style/PlusBtnStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/TeamTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/team_2" />

                <ImageButton
                    android:id="@+id/decreaseTeam2"
                    style="@style/MinusBtnStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/score_2"
                    style="@style/TeamTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/initial_count" />

                <ImageButton
                    android:id="@+id/increaseTeam2"
                    style="@style/PlusBtnStyle"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/score_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Large_margin"
            android:background="@color/teal_700"
            android:text="@string/reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>